Add html content
Add the basics of the html page of all content I see from the png. No styling as of yet.

--- a/landing-page.html
+++ b/landing-page.html
@@ -7,6 +7,49 @@
     <title>Landing-Page</title>
 </head>
 <body>
-    
+    <div class="header">
+        <h3>HEADER LOGO</h3>
+        <p>header link 1</p>
+        <p>header link 2</p>
+        <p>header link 3</p>
+    </div>
+    <div class="main-body">
+        <div class="introduction">
+            <div>
+                <h1>This webpage is awesome</h1>
+                <p>This webpage has subtext blah blah blah blah I can't be bothered to write this down</p>
+                <button>Click here</button>
+            </div>
+            <div>
+                <img >Image placeholder goes here</img>
+            </div>
+        </div>
+        <div class="main-content">
+            <h3>SOME INFORMATION</h3>
+            <div class="cards">
+                <p>This is some tubtext underneath an illustration or image</p>
+            </div>
+            <div class="cards">
+                <p>This is some tubtext underneath an illustration or image</p>
+            </div>
+            <div class="cards">
+                <p>This is some tubtext underneath an illustration or image</p>
+            </div>
+            <div class="cards">
+                <p>This is some tubtext underneath an illustration or image</p>
+            </div>
+        </div>
+        <div class="quote">
+            <p>This is an inspiring quote... Or maybe just a quote and not inspirational and just fills up space on the webpage... Yeah! the latter.</p>
+            <p>K. Niekamp</p>
+        </div>
+        <div class="call-to-action">
+            <div class="action-box">
+                <h2>Signup! A call to action.</h2>
+                <p>signup to this nonexisting webpage and recieving the sweet sweet value of nothing.</p>
+                <button>Sign me up</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
