Add header with flex & change text and background color
Adds a flex container for the header and makes the background purple. Changes the text to beige and seperates the flex-containes inside the header.

To the left there will be the title to the right will be links grouped up

--- a/landing-page.html
+++ b/landing-page.html
@@ -9,9 +9,11 @@
 <body>
     <div class="header">
         <h3>HEADER LOGO</h3>
-        <p>header link 1</p>
-        <p>header link 2</p>
-        <p>header link 3</p>
+        <div>
+            <p>header link 1</p>
+            <p>header link 2</p>
+            <p>header link 3</p>
+        </div>
     </div>
     <div class="main-body">
         <div class="introduction">
