--- a/index.html
+++ b/index.html
@@ -28,17 +28,23 @@
         </div>
         <div class="main-content">
             <h3>SOME INFORMATION</h3>
-            <div class="cards">
-                <p>This is some tubtext underneath an illustration or image</p>
-            </div>
-            <div class="cards">
-                <p>This is some tubtext underneath an illustration or image</p>
-            </div>
-            <div class="cards">
-                <p>This is some tubtext underneath an illustration or image</p>
-            </div>
-            <div class="cards">
-                <p>This is some tubtext underneath an illustration or image</p>
+            <div>
+                <div class="cards">
+                    <img></img>
+                    <p>This is some tubtext underneath an illustration or image</p>
+                </div>
+                <div class="cards">
+                    <img></img>
+                    <p>This is some tubtext underneath an illustration or image</p>
+                </div>
+                <div class="cards">
+                    <img></img>
+                    <p>This is some tubtext underneath an illustration or image</p>
+                </div>
+                <div class="cards">
+                    <img></img>
+                    <p>This is some tubtext underneath an illustration or image</p>
+                </div>
             </div>
         </div>
         <div class="quote">
