Add quote to webpage
Adds some design to the quote section of the webpage being centered in the page with the author of the quote being on the bottom

--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
             </div>
         </div>
         <div class="quote">
-            <p>This is an inspiring quote... Or maybe just a quote and not inspirational and just fills up space on the webpage... Yeah! the latter.</p>
-            <p>K. Niekamp</p>
+            <div>
+                <h4>This is an inspiring quote... Or maybe just a quote and not inspirational and just fills up space on the webpage... Yeah! the latter.</h4>
+                <p>~K. Niekamp~</p>   
+            </div>   
         </div>
         <div class="call-to-action">
             <div class="action-box">
