Add a call to action
Adds a call to action box that pops out of the screen

--- a/index.html
+++ b/index.html
@@ -55,9 +55,13 @@
         </div>
         <div class="call-to-action">
             <div class="action-box">
-                <h2>Signup! A call to action.</h2>
-                <p>signup to this nonexisting webpage and recieving the sweet sweet value of nothing.</p>
-                <button>Sign me up</button>
+                <div>
+                    <h2>Signup! A call to action.</h2>
+                    <p>signup to this nonexisting webpage and recieving the sweet sweet value of nothing.</p>
+                </div>
+                <div>
+                    <button>Sign me up</button>
+                </div>
             </div>
         </div>
     </div>
