--- a/index.html
+++ b/index.html
@@ -65,5 +65,8 @@
             </div>
         </div>
     </div>
+    <div class="footer">
+        <p>Copyright © Niekamp Studio™</p>
+    </div>
 </body>
 </html>
